// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Analytics allows default analytics function to be ovewridden 1`] = `
Object {
  "button_style": "default",
  "button_type": "button",
  "event_extension": "Design system integration",
  "event_name": "button_engagement",
  "parent_component_heading": " ",
  "parent_component_type": " ",
  "text": "Foo",
}
`;

exports[`Button Analytics overrides analytics event tracking on open 1`] = `
Array [
  Object {
    "button_style": "default",
    "button_type": "button",
    "event_extension": "Design system integration",
    "event_name": "button_engagement",
    "parent_component_heading": " ",
    "parent_component_type": " ",
    "text": "alternate content",
  },
]
`;

exports[`Button Analytics sends anchor analytics event 1`] = `
Array [
  Object {
    "button_style": "default",
    "button_type": "link",
    "event_extension": "Design system integration",
    "event_name": "button_engagement",
    "link_url": "#/somewhere-over-the-rainbow",
    "parent_component_heading": " ",
    "parent_component_type": " ",
    "text": "Foo",
  },
]
`;

exports[`Button Analytics sends button analytics event 1`] = `
Array [
  Object {
    "button_style": "default",
    "button_type": "button",
    "event_extension": "Design system integration",
    "event_name": "button_engagement",
    "parent_component_heading": " ",
    "parent_component_type": " ",
    "text": "Foo",
  },
]
`;

exports[`Button renders as an anchor with custom prop 1`] = `
<DocumentFragment>
  <ds-button
    href="/example"
    target="_blank"
    type="submit"
  >
    <a
      class="ds-c-button"
      href="/example"
      target="_blank"
    >
      Foo
    </a>
    <template />
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders as button 1`] = `
<DocumentFragment>
  <ds-button>
    <button
      class="ds-c-button"
      type="button"
    >
      Foo
    </button>
    <template />
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders disabled anchor correctly 1`] = `
<DocumentFragment>
  <ds-button
    disabled="true"
    href="#!"
  >
    <a
      aria-disabled="true"
      class="ds-c-button"
      role="link"
    >
      Link button
    </a>
    <template />
  </ds-button>
</DocumentFragment>
`;

exports[`Button renders disabled button 1`] = `
<DocumentFragment>
  <ds-button
    disabled="true"
  >
    <button
      class="ds-c-button"
      disabled=""
      type="button"
    >
      Foo
    </button>
    <template />
  </ds-button>
</DocumentFragment>
`;
